Oracle Change Log
=================

0.20
====

Added ability to recognize "create package" and "create package body" statements.
Allow the user to configure whether or not to show the syntax error offset 
in the SQL Editor.

0.19
====

Bug #1820214: 2.5.1 DB aliases do not transfer properly to 2.6.1

0.18
====

 - Added support for working with columns that have data type of XMLType
 - Added capability to put the cursor at the position in the SQL where the 
 statement failed.  
- Added source tab for tables to allow viewing the source for
  materialized views.
- Added option to hide Recycle Bin tables (Oracle 10g Flashback Database).

0.17
====

- Added support for executing create procedure and create function blocks 
  delimited by a single "/" such as is supported in SQL-Plus.  Also, added 
  support for the "@" construct which is used to specify a script file to be 
  included.

- Added the schema name to the SID for session nodes - it's easier now to 
  find the session you are looking for.
  
- Source tab for views now presents source code that is formatted and 
  correctly formed to allow it to be used as an SQL statement to replicate 
  the view.

0.16
====

- Added access to SYS schema for non-privileged users since this is where the 
  user-oriented DDL information tables and views are located.

0.15
====

- Automatically limits the schema objects shown the object tree to those schemas that
  have tables that the user has privileges to access.(Users with DBA privilege are 
  unaffected by this change)  This removes the clutter of excess empty schemas in the 
  object tree .

- Requires 2.1final or higher


0.14
====

- Patch #1324774 The source SQL statement used to create a view is now available via the 
  Oracle Plugin (Thanks to Alexander Buloichik)
- Updated for SQuirreL SQL Client 2.1

0.13
====

- Updated for SQuirrel SQL Client 1.2beta6.

0.12
====

- Updated for SQuirrel SQL Client 1.2beta4.

0.11
====

- Updated for SQuirrel SQL Client 1.1rc1.
