@@ -4,8 +4,9 @@ Oracle Change Log
 0.20
 ====
 
-Added ability to recognize "create package" and "create package body" statements.
-Allow the user to configure whether or not to show the syntax error offset 
+ - Added validity (VALID|INVALID) field to trigger details tab for triggers.
+ - Added ability to recognize "create package" and "create package body" statements.
+ - Allow the user to configure whether or not to show the syntax error offset 
 in the SQL Editor.
 
 0.19
